loopdowhile.Poucet1.scala.error
Erreur de compilation :
Poucet1:15: error: value =< is not a member of Int
  if (biscuit =< 2 ){ biscuit = 2}
              ^